ecmascript/parser/tests/test262-error-references/fail/e5fabf7fc4ae5dea.js.stderr
error: Parenthesized expression cannot contain spread operator
 --> $DIR/tests/test262-parser/fail/e5fabf7fc4ae5dea.js:1:7
  |
1 | (a,...a)/*‪*/
  |       ^

